--- a/personalblog-backend/pom.xml
+++ b/personalblog-backend/pom.xml
@@ -97,7 +97,6 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -109,6 +108,7 @@
             <version>3.0.2</version>
             <scope>test</scope>
         </dependency>
+<!--        监控功能-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
